--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
 
-  <body>
-    <main id="container"></main>
+  <body class="container">
+    <header>
+      <h1>Nashville Litter</h1>
+
+      <nav class="selectContainer">
+        <div class="parkContainer"></div>
+        <div class="dumpContainer"></div>
+        <div class="eateriesContainer"></div>
+      </nav>
+    </header>
+
+    <main>
+      <article class="previewContainer">
+        <section class="parkPreview"></section>
+        <section class=""></section>
+        <section></section>
+        <section></section>
+      </article>
+    </main>
 
     <script type="module" src="./scripts/main.js"></script>
   </body>
