got some color up, got the drop down rendering, created more files for structure and am going to relax now

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>Nashville Litter</h1>
 
       <nav class="selectContainer">
+        <!-- the park container is a drop down list -->
         <div class="parkContainer"></div>
         <div class="dumpContainer"></div>
         <div class="eateriesContainer"></div>
